Fix margin, padding and alignment on certain items

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
 }
-
-
 
 ul {
     list-style: none;
@@ -22,21 +25,27 @@ a {
 
 button {
     width: 100px;
-    height: auto;
+    height: 25px;
     background-color: #3882F6;
     color: #F9FAF8;
     font-weight: bold;
     border: 0px;
     border-radius: 5px;
+    padding: 5px 5px;
 }
 
 .header, .intro, .footer {
     background-color: #1F2937;
 }
 
+.header, .intro, .footer, .random-info, .quote-box, .ad-container {
+    padding-bottom: 25px;
+    padding-top: 25px;
+}
+
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     color: #F9FAF8;
     font-size: 24px;
 }
@@ -49,6 +58,7 @@ button {
 .intro {
     display: flex;
     justify-content: center;
+    align-items: flex-start
 }
 
 .intro p {
@@ -59,7 +69,7 @@ button {
 .intro-left {
     display: flex;
     flex-direction: column;
-    width: 20vw;
+    border: 2px solid red;
     justify-content: flex-start;
 }
 
@@ -93,6 +103,8 @@ button {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .cards img {
